--- a/templates/show_route.html
+++ b/templates/show_route.html
@@ -14,7 +14,7 @@
       </form>
     </p>
     <img
-      src="{{ url_for('static', filename='figure_1.png') }}"
+      src="data:image/png;base64, {{ img_buffer }}"
       alt="Shipping Route"
     />
   </body>
