--- a/templates/show_route.html
+++ b/templates/show_route.html
@@ -4,18 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shipping Route - Result</title>
+    <style>
+      body {
+        font-family: "Arial", sans-serif;
+        text-align: center;
+        margin: 20px;
+      }
+
+      h1 {
+        color: #333;
+      }
+
+      p {
+        margin: 20px 0;
+      }
+
+      img {
+        max-width: 100%;
+        height: auto;
+        margin-top: 20px;
+      }
+    </style>
   </head>
   <body>
     <h1>Shortest Route</h1>
     <p>
-      Shortest route 
-      <form action="/show_route" method="post">
-        '{{ shortest_path[0] }}' to '{{ shortest_path[-1] }}': {{ shortest_path }}
-      </form>
+      Shortest route from '{{ shortest_path[0] }}' to '{{ shortest_path[-1] }}':
+      {{ shortest_path }}
     </p>
-    <img
-      src="{{ url_for('static', filename='figure_1.png') }}"
-      alt="Shipping Route"
-    />
+    <img src="data:image/png;base64, {{ img_buffer }}" alt="Shipping Route" />
   </body>
 </html>
