--- a/templates/show_route.html
+++ b/templates/show_route.html
@@ -33,5 +33,33 @@
       {{ shortest_path }}
     </p>
     <img src="data:image/png;base64, {{ img_buffer }}" alt="Shipping Route" />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plot.jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(city_with_highest_sales).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(profite_region).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(sales,profit,quantity).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(sub_kategori).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/shipmode.jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/subcategory.jpg"
+      alt="plot"
+    />
   </body>
 </html>
