--- a/templates/show_route.html
+++ b/templates/show_route.html
@@ -203,11 +203,40 @@
             </p>
 
             <img src="data:image/png;base64, {{ img_buffer }}" alt="Shipping Route" style="width: 80%; height: 80%;" />
-
+            
 
         </nav>
 
     </article>
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plot.jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(city_with_highest_sales).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(profite_region).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(sales,profit,quantity).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/plt(sub_kategori).jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/shipmode.jpg"
+      alt="plot"
+    />
+    <img
+      src="https://samplesuperstore.s3.amazonaws.com/result/subcategory.jpg"
+      alt="plot"
+    />
+  </body>
     <script>
         $(document).ready(function () {
             $(".menu-toggle").click(function () {
